--- a/client/assets/css/application.css
+++ b/client/assets/css/application.css
@@ -33,3 +33,57 @@ body {
 	color: rgba(88, 88, 88, 0.61);
 	text-shadow: 0px 0px 6px rgb(233, 233, 233);
 }
+
+/*Tutorial Pane CSS*/
+
+#tutorial {
+	color: rgb(30, 30, 30);
+	text-align: center;
+	font-family: 'Titillium Light';
+	position: fixed;
+	top: 0pt;
+	left: 0pt;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+	background-color: rgba(255, 255, 255, 0.62);
+}
+
+#tutorialTitle {
+	position: relative;
+	top: 20pt;
+	font-family: 'Titillium';
+	font-size: 50pt;
+}
+
+#tutorialGuide {
+	width: 50%;
+	position: relative;
+	top: 50pt;
+	right: 30pt;
+	float: right;
+	font-size: 30pt;
+}
+
+#tutorial img {
+	position: relative;
+	top: 50pt;
+	width: 400pt;
+	border-radius: 10pt;
+	border-style: solid;
+	border-width: 4pt;
+}
+
+#tutorialButton {
+	margin-top: 20pt;
+	cursor: crosshair;
+	font-size: 40pt;
+	padding: 8pt;
+	border-radius: 6pt;
+	border-style: solid;
+	width: auto;
+}
+
+#tutorialButton:hover {
+	background-color: #25b2b9;
+}
