--- a/client/assets/css/application.css
+++ b/client/assets/css/application.css
@@ -125,10 +125,8 @@ body {
 
 .level img {
 	width: 50pt;
+	height: 50pt;
 	position: relative;
-	/* left: 0pt; */
-	/* float: left; */
-	/* margin-left: -139pt; */
 	vertical-align: middle;
 	border-style: solid;
 	border-color: gray;
@@ -149,4 +147,26 @@ body {
 	padding-right: 5pt;
 	border-top-right-radius: 5pt;
 	border-bottom-right-radius: 5pt;
+}
+
+.selected {
+	background: rgb(92, 196, 146);
+	color: white;
+}
+
+/*Play CSS*/
+
+#play img{
+	background: rgba(255, 255, 255, 0);
+	border-style: solid;
+	border-radius: 10pt;
+	border-color: gray;
+	box-shadow: 0px 0px 10px;
+}
+
+#play {
+	visibility: visible;
+	position: absolute;
+	float: right;
+	margin-left: 259pt;
 }
