--- a/client/assets/css/application.css
+++ b/client/assets/css/application.css
@@ -91,6 +91,7 @@ body {
 /*Level Select CSS*/
 
 #levelSelect {
+	overflow: scroll;
 	text-align: center;
 	padding-top: 20pt;
 	margin-left: 10pt;
@@ -99,6 +100,11 @@ body {
 	height: 100%;
 	background-color: rgba(99, 99, 99, 0.51);
 	box-shadow: 0px 0px 24px;
+}
+
+::-webkit-scrollbar{
+	width: 0px;
+	background-color: transparent;
 }
 
 #levelTitle {
@@ -161,8 +167,8 @@ body {
 	padding: 0pt;
 	border-top-left-radius: 10pt;
 	border-top-right-radius: 10pt;
-	width: 500pt;
-	height: 300pt;
+	width: 600px;
+	height: 400px;
 	position: relative;
 }
 
